--- a/02-swagger/pom.xml
+++ b/02-swagger/pom.xml
@@ -9,10 +9,9 @@
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.cgx.springboot</groupId>
-    <artifactId>01quickstart</artifactId>
+    <artifactId>02swagger</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>01quickstart</name>
-    <description>Spring Boot快速启动demo</description>
+    <description>Spring Boot整合swagger</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -43,6 +42,24 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <!-- swagger2 -->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>2.9.2</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>2.9.2</version>
+            </dependency>
+
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>swagger-bootstrap-ui</artifactId>
+            <version>1.8.8</version>
         </dependency>
 
 
